Version 0.0.3 ()
- Fix `getParamset` for `MASTER`, returns default

Version 0.0.2 (2019-12-16)
- Add `getParamset` method
- Add `devices` argument for Server-object
- Fire events when `setValue` has been used
- Improve (de)init
- Code cleanup

Version 0.0.1 (2019-12-14)
- Initial version