@@ -1,5 +1,6 @@
 Version 0.0.3 ()
 - Fix `getParamset` for `MASTER`, returns default
+- Add basic `putParamset` method
 
 Version 0.0.2 (2019-12-16)
 - Add `getParamset` method
